# share

./: .gitignore  README.md  bug_compile_error.txt  code_notes.txt  notes.txt  rtabmap_1.pgm  rtabmap_1.yaml  tools  矩阵的物理意义.docx
1.code_snippets_ws/costmap_2d/: CMakeLists.txt
1.code_snippets_ws/src/: CMakeLists.txt
1.code_snippets_ws/src/frontier_exploration-indigo-devel/: CMakeLists.txt
1.code_snippets_ws/src/frontier_exploration-indigo-devel/src/: test_main.cpp
1.code_snippets_ws/src/pkg_test/: CMakeLists.txt
1.code_snippets_ws/src/pkg_test/src/: tf_tf2.cpp
1.code_snippets_ws/src/pkg_test_actionlib/: notes.txt
1.code_snippets_ws/src/pkg_test_actionlib/action/: Cout.action
1.code_snippets_ws/src/pkg_test_actionlib/launch/: test.launch
1.code_snippets_ws/src/pkg_test_actionlib/src/: server_node.cpp
1.code_snippets_ws/src/pkg_test_actionlib/srv/: Cout.srv
1.code_snippets_ws/src/pkg_test_camera/: CMakeLists.txt  package.xml
1.code_snippets_ws/src/pkg_test_camera/launch/: test.launch
1.code_snippets_ws/src/pkg_test_camera/src/: TestCamera.cpp
1.code_snippets_ws/src/pkg_test_ceres/: CMakeLists.txt  package.xml
1.code_snippets_ws/src/pkg_test_ceres/src/: test_ceres.cpp
1.code_snippets_ws/src/pkg_test_costmap/launch/: test_costmap.launch
1.code_snippets_ws/src/pkg_test_eigen/: CMakeLists.txt  package.xml
1.code_snippets_ws/src/pkg_test_eigen/src/: main.cpp
1.code_snippets_ws/src/pkg_test_g2o/: CMakeLists.txt  package.xml
1.code_snippets_ws/src/pkg_test_g2o/src/: fitting_curve_g2o.cpp
1.code_snippets_ws/src/pkg_test_image_transport/: package.xml
1.code_snippets_ws/src/pkg_test_image_transport/src/: node_test_image_transport.cpp
1.code_snippets_ws/src/pkg_test_kdl/: package.xml
1.code_snippets_ws/src/pkg_test_movebase/: CMakeLists.txt  package.xml
1.code_snippets_ws/src/pkg_test_movebase/launch/: test_movebase.launch
1.code_snippets_ws/src/pkg_test_movebase/param/: base_local_planner_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base.xml~
1.code_snippets_ws/src/pkg_test_nodelet/: CMakeLists.txt  nodelet.xml~
1.code_snippets_ws/src/pkg_test_nodelet/src/: node_test_nodelet.h  test_node.cpp
1.code_snippets_ws/src/pkg_test_pcljoint/: CMakeLists.txt  package.xml
1.code_snippets_ws/src/pkg_test_pcljoint/src/: gx_main.cpp  main.cpp
1.code_snippets_ws/src/pkg_test_rviz/: CMakeLists.txt
1.code_snippets_ws/src/pkg_test_smach/scripts/: test.py
1.code_snippets_ws/src/pkg_test_sophus/: CMakeLists.txt
1.code_snippets_ws/src/pkg_test_sophus/src/: .main.cpp.swp  main.cpp
1.code_snippets_ws/src/pkg_test_sqdb/: CMakeLists.txt  package.xml
1.code_snippets_ws/src/pkg_test_statechart/: CMakeLists.txt
1.code_snippets_ws/src/pkg_test_statechart/src/: test_statechart_foobar.cpp  test_statechart_helloworld.cpp  (+1 more)
1.code_snippets_ws/src/pkg_test_tf2/: package.xml
1.code_snippets_ws/src/pkg_test_vo/: CMakeLists.txt  package.xml
2.code_projects_ws/gaoxiang_slam_pro/src/: CMakeLists.txt  slam_end.cpp  vo.cpp
2.code_projects_ws/master_opencv/Chapter3_MarkerlessAR/: CMakeLists.txt
4.my_ubuntu/: mantou_eclips.config
4.my_ubuntu/eclipse_cfg/: neon.csv
b_auto_localization/: CMakeLists.txt  package.xml
b_auto_localization/action/: AutoLocalizationAction.action
gaoxiang_slam_pro/: CMakeLists.txt  CMakeLists.txt.user.8e6530b
gaoxiang_slam_pro/include/: slamBase.h
gaoxiang_slam_pro/param/: param.yaml
gaoxiang_slam_pro/src/: CMakeLists.txt  feature_detect.cpp  joint_point_cloud.cpp  main.cpp  slam.cpp  slamBase.cpp  slam_end.cpp  vo.cpp
master_opencv/Chapter3_MarkerlessAR/: CMakeLists.txt
master_opencv/Chapter3_MarkerlessAR/src/: CMakeLists.txt  main.cpp
master_opencv_cmake/ch3/: CMakeLists.txt
master_opencv_cmake/ch3/src/: CMakeLists.txt  main.cpp
pkg_test_nodelet/launch/: test.launch
pkg_test_nodelet/src/: node_test_nodelet.h  nodelet.cpp
qt_cmake_module/: CMakeLists.txt
qt_cmake_module/src/: CMakeLists.txt
qtcreator/QtProject/: QtCreator.ini
qtcreator/generic-highlighter/: xml.xml
seven_ws/: 3.txt
seven_ws/move_base/: CMakeLists.txt
seven_ws/src/: CMakeLists.txt
seven_ws/src/move_base/: CMakeLists.txt
seven_ws/src/pkg_test/: CMakeLists.txt
seven_ws/src/pkg_test_actionlib/: CMakeLists.txt  package.xml
seven_ws/src/pkg_test_costmap/: CMakeLists.txt  package.xml
seven_ws/src/pkg_test_nodelet/: nodelet.xml
seven_ws/src/pkg_test_rviz/: package.xml
seven_ws/src/pkg_test_smach/: package.xml
seven_ws/src/pkg_test_sqdb/: CMakeLists.txt
seven_ws/src/pkg_test_statechart/: CMakeLists.txt  package.xml
src/b_orbcamera/: CMakeLists.txt  CMakeLists2.txt  package.xml
src/b_orbcamera/include/: depth_conversions0.h  depth_conversions1.h  depth_conversions2.h  depth_traits.h
src/b_orbcamera/launch/: b_orbcamera.launch  b_orbcamera_nodelet.launch  b_orbcamera_single.launch  depth_registration.launch.xml  rgb_depth_regist_combine.launch2.xml
src/b_orbcamera/plugins/: orb_nodelet.xml  orb_nodelet_test.xml
src/b_orbcamera/src/: CameraParameter.hpp  NxCamera.hpp  NxSkeleton.hpp  OrbbecCamera.hpp  OrbbecCameraNodelet.cpp  TestOrbbecCameraNode.cpp  TestOrbbecCameraNodelet.cpp  main_orbcamera.cpp
src/b_usb_cam/: CMakeLists.txt  package.xml
src/b_usb_cam/include/b_usb_cam/: usb_cam.h
src/b_usb_cam/launch/: b_usb_cam.launch  b_usb_cam_nodelet.launch  usb_cam_org.launch
src/b_usb_cam/nodes/: usb_cam_node.cpp  usb_cam_node2.cpp  usb_cam_nodelet.cpp
src/b_usb_cam/plugins/: usb_cam_nodelet.xml
src/b_usb_cam/src/: usb_cam.cpp
src/frontier_exploration-indigo-devel/: CMakeLists.txt.user.8e6530b
src/frontier_exploration-indigo-devel/src/: explore_server.cpp
src/pkg_test/src/: opencv_to_image.cpp
src/pkg_test_actionlib/action/: Cout.action
src/pkg_test_camera/: nodelet_plugins.xml
src/pkg_test_message_filter/src/: node_test_message_filter.cpp
src/pkg_test_nodelet/: CMakeLists.txt
src/pkg_test_nodelet/launch/: test.launch
src/pkg_test_nodelet/src/: nodelet.cpp
src/pkg_test_tf2/: CMakeLists.txt
ubuntu刷系统配置相关/: _vimrc
ubuntu相关/_vim/: .netrwhist
(+48 files in other folders)
